[package]
name = "vanta"
version = "0.1.0"
edition = "2024"

[lints.clippy]
absolute_paths = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
expect_used = "warn"


[features]
default = ["inhouse"]
# Direct ConPTY (Windows) / forkpty (Unix) FFI — the target backend.
inhouse = []
# Temporary reference backend via the `portable-pty` crate, kept only until
# `inhouse` is proven on every platform. Not a shipped fallback.
portable = ["portable-pty"]

[dependencies]
portable-pty = { version = "0.8", optional = true }
